<resources>
    <string name="app_name">FlashChat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_search">Search</string>
    <string name="enter_your_message">Enter your message...</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Log in</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="or">Or</string>
    <string name="create_new_account">Create new account</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here"> Login here</string>
    <string name="gender">Gender:       </string>
    <string name="phone_number">Phone number</string>

    <string name="facebook_app_id">490149971366174</string>
    <string name="fb_login_protocol_scheme">fb490149971366174</string>
    <string name="Save">Save</string>

    <string-array name="genderlist">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string name="title_activity_search">Search</string>
    <string name="profile">Profile</string>
    <string name="the_search_has_not_given_any_results">The search has not given any results</string>
    <string name="stop_polling">Stop polling</string>
    <string name="polling_on">Start polling</string>
    <string name="search">Search..</string>
    <string name="enter_which_person_you_search">Enter which person you search.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="show_adds">Show adds</string>
    <string name="clear_history">Clear history</string>
    <string name="to_profile">Go to profile</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="apply">apply</string>


</resources>
