<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <AutoCompleteTextView
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:ems="10"
                android:nextFocusForward="@id/email"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <AutoCompleteTextView
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:ems="10"
                android:nextFocusForward="@id/email"
                />
        </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:text="@string/apply"
        />


</LinearLayout>