<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:background="@drawable/register">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="27sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            />
</FrameLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/path28"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="360dp">

        <ProgressBar
            android:id="@+id/register_progress"
            android:visibility="gone"
            android:layout_marginTop="180dp"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="Orientation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            >
            <ImageView
                android:paddingTop="15dp"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_name"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <AutoCompleteTextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:ems="10"
                    android:nextFocusForward="@id/date_of_birth"
                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"

                >
                <ImageView
                    android:paddingTop="15dp"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_date_of_birth"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:ems="10"
                        android:nextFocusForward="@id/email"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginRight = "18dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/gender_switch"
                    android:text="@string/gender"
                    android:showText="true"
                    android:textOn="M"
                    android:textOff="F"
                    android:layout_width="wrap_content"
                    android:textSize="15sp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            >
            <ImageView
                android:paddingTop="15dp"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_email_icon"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:ems="10"
                    android:nextFocusForward="@id/phone_number"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            >
            <ImageView
                android:paddingTop="15dp"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phone_number"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <AutoCompleteTextView
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:ems="10"
                    android:nextFocusForward="@id/password"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            >
            <ImageView
                android:paddingTop="15dp"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_password"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:ems="10"
                    android:nextFocusForward="@id/confirm_password"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            >
            <ImageView
                android:paddingTop="15dp"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_password"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/register_btn"
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@color/white"
            />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="240dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                />
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>